[package]
name = "pinocchio-raydium-cpmm-cpi"
description = "Pinocchio helpers to invoke Raydium CPMM instructions"
version = "0.1.2"
edition = "2021"
authors = ["kirarisk"]
license = "Apache-2.0"
readme = "./README.md"
repository = "https://github.com/kirarisk/pinocchio-raydium-cpmm-cpi"
homepage = "https://github.com/kirarisk/pinocchio-raydium-cpmm-cpi"
keywords = ["solana", "raydium", "cpmm", "pinocchio", "cpi"]

[lib]
crate-type = ["rlib"]

[dependencies]
pinocchio = "0.8.4"
pinocchio-pubkey = "0.2.4"
borsh = { version = "1.5.7", default-features = false, features = ["derive"] }
